--- a/public/about.html
+++ b/public/about.html
@@ -33,7 +33,7 @@
                     un listado con todos los datos de la tabla.
                 </p>
                 <p>
-                    Podes ver el codigo en <a href="https://github.com/juanpabloch">GitHub</a>
+                    Podes ver el codigo en <a href="https://github.com/juanpabloch/registro-alumnos/tree/master/public">GitHub</a>
                 </p>
             </div>
         </div>
